<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="hint_cmpnombre">Name</string>
    <string name="hint_cmptelefono">Phone</string>
    <string name="hint_cmpemail">E-mail</string>
    <string name="hint_cmptdireccion">Address</string>
    <string name="text_btncancelar">Cancel</string>
    <string name="text_btnguardar">Save</string>
    <string name="mesg_preferences_saved">Saved data for user \'%s\'</string>

    <!-- Recursos CrearContactoFragment.java -->
    <string name="title_alertdialog_error">Error</string>
    <string name="mesg_alertdialog_error">No preferences configured</string>
    <string name="mesg_toast_contact_added">%s has beed added to the list!</string>

    <!-- Recursos ListaContactosFragment.java -->
    <string name="mesg_confirm_delete">Are you sure you want to remove selected contacts?</string>
    <string name="title_alertdialog_confirm">Confirm Selection</string>
    <string name="mesg_positive_dialog_option">YES</string>
    <string name="mesg_negative_dialog_option">NO</string>
    <string name="mesg_toast_sync_confirm">%s synchronized</string>
    <string name="mesg_app_not_configured">Not configured for sync</string>

    <!-- Recursos para HttpServiceBroker.java -->
    <string name="mesg_wifi_not_available">No WiFi available</string>
    <!-- Recursos para Http????Service.java -->
    <string name="mesg_service_sync">Synchronizing data %s...</string>

    <!-- Recursos Panel Configuración -->
    <string name="title_settings_menu_item">Settings</string>
    <string name="title_config_username">Username</string>
    <string name="summary_config_username">Username for data syncronization</string>
    <string name="title_user_category">User preferences</string>
    <string name="title_server_category">Server preferences</string>
    <string name="title_config_server">Server</string>
    <string name="summary_config_server">Name or server address</string>
    <string name="title_config_port">Port</string>
    <string name="summary_config_port">Communitacions Port</string>
    <string name="title_swipe_refresh">Swipe To Refresh</string>
    <string name="summary_swipe_refresh">Enable swipe to refresh</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--Recursos para el Widget Contador de Contactos-->
    <string name="widget_simple_titulo">Contacts Stored</string>

    <!--Recursos para la barra de menú en layout de tablet-->
    <string name="label_btn_remove_contact">Remove</string>
    <string name="label_btn_sync_contacts">Synchronize</string>
    <string name="label_btn_add_contact">Add Contact</string>
    <string name="label_btn_contact_list">Contact List</string>

    <!--Recursos para el menú de compartir contactos-->
    <string name="share_title">Share via</string>
    <string-array name="share_options">
        <item>QR Code</item>
        <item>Bluetooth</item>
        <item>Other options</item>
    </string-array>

    <!--Recursos para el menú de seleccionar foto-->
    <string name="select_picture_title">Pick an option</string>
    <string-array name="select_picture_options">
        <item>Camera</item>
        <item>Library</item>
    </string-array>

    <!--Recursos para el Navigation Drawer-->
    <string-array name="nav_drawer_titles">
        <item>Create Contact</item>
        <item>Contact List</item>
        <item>Remove Selected</item>
        <item>Synchronize</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="label_btn_share_contacts">Share</string>

</resources>
