<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.vainiyasoft.agenda.CrearContactoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_above="@+id/gridLayout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgContacto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/contacto"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:alpha="0.8"
                android:cropToPadding="false"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/cmpNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:ems="10"
                android:hint="@string/hint_cmpnombre"
                android:layout_below="@+id/imgContacto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/cmpTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="@string/hint_cmptelefono"
                android:layout_below="@+id/cmpNombre"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/cmpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/hint_cmpemail"
                android:layout_below="@+id/cmpTelefono"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/cmpDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:hint="@string/hint_cmptdireccion"
                android:layout_below="@+id/cmpEmail"
                android:minLines="2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
    </ScrollView>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:columnOrderPreserved="false"
        android:background="@color/texto_gris_oscuro">

        <ImageButton
            android:id="@+id/btnCancelar"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="0"
            android:src="@drawable/ic_menu_erase"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/btnImportar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_horizontal"
            android:src="@drawable/ic_menu_qrcode"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/btnGuardar"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_row="0"
            android:layout_column="2"
            android:src="@drawable/btn_save_contact"
            android:background="@android:color/transparent" />

    </GridLayout>

</RelativeLayout>